# rustapp

./: .env  Cargo.toml
docker_rustapp/: Dockerfile  config-dev.yml  config-test.yml  dev.sh  docker-compose.yml  test.sh  wait_for_db.sh
main/: Cargo.toml  DOCUMENTATION.md
main/migrations/2022-10-17-121402_init/: up.sql
main/migrations/2022-10-17-121402_users/: down.sql  up.sql
main/migrations/2022-11-04-115601_roles/: down.sql  up.sql
main/migrations/2022-11-04-115752_users_roles/: down.sql  up.sql
main/src/: app.rs  db.rs  error_handle.rs  main.rs  routes.rs  schema.rs
main/src/api/: authentication.rs  mod.rs  products.rs  users.rs
main/src/config/: urls.rs
main/src/models/: mod.rs  product.rs  role.rs  user.rs  users_roles.rs
main/src/repos/: mod.rs  products_repo.rs  users_repo.rs
main/src/resources/: solita.txt
main/src/services/: authentication_service.rs
main/src/tests/: authentication_tests.rs  mod.rs  products_endpoints_tests.rs  users_endpoints_tests.rs  utils.rs
main/src/utils/: stdout_utils.rs
migrations/2022-10-17-121402_init/: up.sql
products/: .env  Cargo.toml
products/migrations/2022-10-21-110202_init/: up.sql
products/migrations/2022-11-02-080114_products/: down.sql  up.sql
products/migrations/2022-11-02-080121_categories/: down.sql  up.sql
products/src/: db.rs  main.rs  routes.rs  schema.rs
src/: db.rs  error_handle.rs  main.rs  routes.rs
src/api/: user.rs  users.rs
src/models/: product.rs  user.rs
src/repos/: mod.rs  users_repo.rs
src/tests/: mod.rs  users_endpoints_tests.rs  utils.rs
(+16 files in other folders)
