[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
serde = { version = "^1", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
# disable default features to ignore openSsl error 
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rand = "0.8.5"
derive_more = "0.99.17"
actix-web-httpauth = "0.8.0"
actix-web-grants = "3.0.1"
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
rust-argon2 = "1.0.0"
