[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"
authors = ["Firas Alkhatib <firas88alkhatib@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-web-httpauth = "0.8.0"
actix-web-grants = "3.0.1"
jsonwebtoken = "8.1.1"
rust-argon2 = "1.0.0"
serde = { version = "^1", features = ["derive"] }
derive_more = "0.99.17"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
# disable default features to ignore openSsl error 
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rand = "0.8.5"
chrono = "0.4.22"
